# AndroidSerialPort

./: build.gradle
SerialPortLibrary/src/main/cpp/: CMakeLists.txt  SerialPort.c
app/src/main/java/com/kongqw/serialport/: SelectSerialPortActivity.java  SerialPortActivity.java
app/src/main/java/com/kongqw/serialport/util/: ByteUtil.java
gradle/wrapper/: gradle-wrapper.properties
